k8s/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fishing-app
  namespace: fishing-app
  annotations:
    kubernetes.io/ingress.class: 'gce'
    kubernetes.io/ingress.global-static-ip-name: 'fishing-app-ip'
    networking.gke.io/managed-certificates: 'fishing-app-cert'
    kubernetes.io/ingress.allow-http: 'false'
spec:
  rules:
    - host: kazuma-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fishing-app
                port:
                  name: http
